# wasm_clsuter

./: .swcrc  Cargo.toml  README.md  jsconfig.json  package-lock.json  package.json  webpack.config.js
.cargo/: config.toml
data/: classification.csv  dataclass.py  gaussian.csv  gen.ipynb
js/: App.jsx  index.js  usewasm.js  worker.js
js/data/: blob.csv  classification.csv  data4.csv  gaussian.csv
src/: cluster.rs  lib.rs  ml.rs
src/ml/: activation.rs  math.rs  matrix.rs  nl.rs  nn.rs  sample.rs  utils.rs
src/ml/activation/: hyperbolictangent.rs  identity.rs  leakyrectifiedlinearunit.rs  rectifiedlinearunit.rs  sigmoid.rs  softmax.rs  softplus.rs
src/ml/cost/: cross_entropy.rs  squared_error.rs
