# You must change these to your own details.
[package]
name = "wasm_cluster"
description = "web cam test"
version = "0.1.0"
authors = ["maxtnuk <maxtnuk@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]
parallel = ["rayon", "wasm-bindgen-rayon"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.25"
rayon = {version="1.5", optional=true}
wasm-bindgen-rayon ={version= "1.0",optional=true}
getrandom = { version = "0.2.2", features = ["js"] }
rand = "0.8.3"
futures = "0.3.16"
serde_json = "1.0"
itertools = "0.10.1"
js-sys = "0.3.52"
serde = { version = "1.0", features = ["derive"] }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
    'ImageData',
    'CanvasRenderingContext2d',
    'Window'
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
